[package]
name = "lobsterchat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
logos = "0.12.1"
serde_json = "1.0.82"
serde_with = "2.0.0-rc.0"

[dependencies.uuid]
version = "1.1.2"
features = ["serde"]

[dependencies.serde]
version = "1.0.138"
features = ["derive"]

[features]
default = []
minimessage = []