[package]
name = "lobsterchat"
version = "0.4.2"
edition = "2021"
authors = ["maxus"]
readme = "README.md"
repository = "https://github.com/Maxuss/lobster"
license = "MIT"
description = "Minecraft Chat Components and Adventure MiniMessage in Rust"
categories = ["data-structures", "parser-implementations"]

[dependencies]
anyhow = "1.0.58"
logos = "0.12.1"
serde_json = "1.0.82"
serde_with = "2.0.0-rc.0"

[dependencies.uuid]
version = "1.1.2"
features = ["serde"]

[dependencies.serde]
version = "1.0.138"
features = ["derive"]

[features]
default = ["minimessage"]
minimessage = []