[package]
name = "lobsterchat"
version = "0.4.2"
edition = "2021"
authors = ["maxus"]
readme = "README.md"
repository = "https://github.com/Maxuss/lobster"
license = "MIT"
description = "Minecraft Chat Components and Adventure MiniMessage in Rust"
categories = ["data-structures", "parser-implementations"]

[dependencies]
anyhow = "1.0.70"
logos = "0.12.1"
serde_json = "1.0.95"
serde_with = "2.3.1"

[dependencies.uuid]
version = "1.3.0"
features = ["serde"]

[dependencies.serde]
version = "1.0.159"
features = ["derive"]

[features]
default = ["minimessage"]
minimessage = []
